k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2021-05-08T00:31:05Z"
  generateName: orderwell-5cbfcf695c-
  labels:
    app: orderwell
    pod-template-hash: 5cbfcf695c
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:generateName: {}
        f:labels:
          .: {}
          f:app: {}
          f:pod-template-hash: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"069e7e6c-4aff-4bf4-9f06-bfe2ccee003a"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        f:containers:
          k:{"name":"orderwell"}:
            .: {}
            f:envFrom: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:ports:
              .: {}
              k:{"containerPort":8000,"protocol":"TCP"}:
                .: {}
                f:containerPort: {}
                f:protocol: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kube-controller-manager
    operation: Update
    time: "2021-05-08T00:31:05Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"172.17.0.5"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-05-08T00:34:04Z"
  name: orderwell-5cbfcf695c-6pm5d
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: orderwell-5cbfcf695c
    uid: 069e7e6c-4aff-4bf4-9f06-bfe2ccee003a
  resourceVersion: "6011"
  uid: 8cd17330-6908-49e4-8aca-81cbd9335ae1
spec:
  containers:
  - envFrom:
    - secretRef:
        name: dev-secret
    image: orderwell
    imagePullPolicy: Never
    name: orderwell
    ports:
    - containerPort: 8000
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-qwjk8
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-qwjk8
    secret:
      defaultMode: 420
      secretName: default-token-qwjk8
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-05-08T00:31:05Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-05-08T00:34:04Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-05-08T00:34:04Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-05-08T00:31:05Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://acccc94ef5cc3a1e2fcf75f75841183135ffa25f3318cd6f7f6fb6f276ebe415
    image: orderwell:latest
    imageID: docker://sha256:685045d1aebcba41e82f41216bb80efbea313fe178cc5aa2a2b813fa1f0154fc
    lastState:
      terminated:
        containerID: docker://697c8c8420b3c456e6a4fc1ccfe036aef2278266205fc299961e593021b48dcb
        exitCode: 1
        finishedAt: "2021-05-08T00:32:35Z"
        reason: Error
        startedAt: "2021-05-08T00:32:35Z"
    name: orderwell
    ready: true
    restartCount: 5
    started: true
    state:
      running:
        startedAt: "2021-05-08T00:34:03Z"
  hostIP: 192.168.64.2
  phase: Running
  podIP: 172.17.0.5
  podIPs:
  - ip: 172.17.0.5
  qosClass: BestEffort
  startTime: "2021-05-08T00:31:05Z"
