k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: orderwell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
