k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: default
spec:
  ports:
  - port: 30
    targetPort: 30
    protocol: TCP
  selector:
    app: ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
