k8s/ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: "orderwell.com"
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: "*.orderwell.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
