k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  rules:
  - host: "orderwell.com"
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: ui-service
            port:
              number: 30
  - host: "*.orderwell.com"
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: ui-service
            port:
              number: 30
